--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "chokidar-cli": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.34.0",
     "lucide-react": "^0.563.0",
     "next": "^14.2.0",
     "next-auth": "^4.24.0",
