feat: add bidding chit fund (v2) with multi-asset staking vault
Introduces a new bidding-based circle model alongside the existing sequential
payout system, plus a multi-asset staking vault as collateral prerequisite.

Smart contracts:
- halo-vault-v2: multi-asset deposits (hUSD 80% LTV, STX/sBTC 50% LTV),
  Synthetix yield accumulators, collateral lock/release/slash
- halo-circle-v2: bidding chit fund lifecycle — contribute, bid (lowest wins),
  settle (winner payout + dividends + protocol fee), repayment schedule

Tests: 156 new tests (76 vault-v2 + 80 circle-v2), all passing

Database: 7 new Prisma models (CircleV2, CircleMemberV2, BidV2, RoundResultV2,
ContributionV2, RepaymentV2, VaultDeposit)

API: 10 new endpoints for vault-v2 and circles-v2 operations

Frontend:
- /vault page with per-asset deposit/withdraw and capacity bar
- /circles-v2/create wizard with bid window config
- /circles-v2/[id] detail with bid panel, round history, repayment tracker
- Navbar: added Vault link for authenticated users
- Dashboard: added bidding circles section
- Replaced all CircleDot icons with HALO logo across signin, footer, empty state

--- a/deployments/default.simnet-plan.yaml
+++ b/deployments/default.simnet-plan.yaml
@@ -89,6 +89,16 @@ plan:
             path: contracts/halo-circle.clar
             clarity-version: 3
         - emulated-contract-publish:
+            contract-name: halo-vault-v2
+            emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
+            path: contracts/halo-vault-v2.clar
+            clarity-version: 3
+        - emulated-contract-publish:
+            contract-name: halo-circle-v2
+            emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
+            path: contracts/halo-circle-v2.clar
+            clarity-version: 3
+        - emulated-contract-publish:
             contract-name: halo-mock-sbtc
             emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
             path: contracts/halo-mock-sbtc.clar
