--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -45,6 +45,16 @@ path = "contracts/halo-circle.clar"
 clarity_version = 3
 epoch = "3.0"
 
+[contracts.halo-vault-v2]
+path = "contracts/halo-vault-v2.clar"
+clarity_version = 3
+epoch = "3.0"
+
+[contracts.halo-circle-v2]
+path = "contracts/halo-circle-v2.clar"
+clarity_version = 3
+epoch = "3.0"
+
 [repl.analysis]
 passes = ["check_checker"]
 check_checker = { trusted_sender = false, trusted_caller = false, callee_filter = false }
